# centre

./: autherication.md  pyproject.toml  requirements.txt
api/v1/: urls.py
api/v1/cources/: urls.py  views.py
api/v1/events/: serializers.py  urls.py  views.py
api/v1/marks/: urls.py
api/v1/users/: serializers.py  urls.py  views.py
cources/: forms.py  urls.py  views.py
educational_centre/: settings.py  urls.py  views.py
events/: urls.py  views.py
static/cources/: main.css
static/users/css/: main.css
templates/cources/: cource_list.html  course_update.html  create_cource.html
templates/events/: event_create.html  event_list.html  event_update.html
templates/users/: index.html  leader_profile.html  login.html  my_users.html  myprofile.html  question.html  registration.html  student_detail.html  student_list.html  student_profile.html  student_register.html  student_update.html  teacher_detail.html  teacher_list.html  teacher_profile.html  teacher_register.html  teacher_update.html  user_create.html  user_detail.html  user_update.html
users/: forms.py  urls.py  views.py
