[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["RahimjonPc <abduganievrahimjon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
djoser = "^2.1.0"
django-filter = "^2.4.0"
Pillow = "^8.1.0"
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
